correction footer ( meilleur alignement des images )

--- a/src/app/office/shared/components/header/header.component.scss
+++ b/src/app/office/shared/components/header/header.component.scss
@@ -1,6 +1,6 @@
 .logov2 {
   padding: 0 1.25rem;
-  font-size: 1.30rem;
+  font-size: 1.3rem;
   white-space: nowrap;
   text-decoration: none;
 }
